<resources>
    <string name="abbrev_wday_month_day_no_year">EEE, MMMM d</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="alarm_app_name">Clock</string>
    <string name="cubeclock_app_name">CubeClock</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="about">About</string>
    <string name="about_licenses">Licenses</string>
    <string name="about_translations">Translations</string>
    <string name="acc_system_setting_description">"Tap on the top right hand toggle to enable CM Launcher↗↗↗

Attention: You may receive standard privacy warnings. There's no need to worry, no personal data will be collected."</string>
    <string name="accessibility_service_description">"Allow TSF Launcher to expand the notification shade, for use with TSF Actions (gestures).
\t\tTap the switch in the upper right.

\t\tThis is ONLY used to command the system to expand the notification shade or the quick settings shade. No other information is requested or processed from this permission."</string>
    <string name="accessibility_service_enable">Enable Accessibility Service</string>
    <string name="accessibility_service_enable_long">"Expand Notifications requires enabling TSF Launcher's Accessibility service, as this devices does not allow standard apps to expand the notification shade"</string>
    <string name="activity_not_found">Application is not installed on your phone.</string>
    <string name="activity_picker">Activities</string>
    <string name="adchoices">AdChoices</string>
    <string name="add_shortcut">Add shortcuts</string>
    <string name="advanced_setting">Advanced</string>
    <string name="advanced_setting_screen_unlocked">Screen edit unlock</string>
    <string name="agree_download_diy_theme">This is the theme you just look through. Apply it now?</string>
    <string name="album_share_content">Wow, the themes here are even cooler than iPhone!</string>
    <string name="album_share_title">How does Android beat iOS</string>
    <string name="app__name">CM Launcher</string>
    <string name="app_drawer">App Drawer</string>
    <string name="app_drawer_customize_title">Customize your title</string>
    <string name="app_name">TSF-Shell</string>
    <string name="app_short_name">【CM Launcher】</string>
    <string name="apply_now">Apply now</string>
    <string name="audio_text">Microphone</string>
    <string name="auto_clear_memory">Auto clean up</string>
    <string name="auto_clear_memory_summary">Automatically clean up idle memory to improve launcher performance.</string>
    <string name="btn_dislike">Dislike</string>
    <string name="btn_ok_perm">OK</string>
    <string name="calendar_text">Calendar</string>
    <string name="camera_title">Camera</string>
    <string name="cancel_dragging">Cancel</string>
    <string name="changewallpaper">Shuffle</string>
    <string name="changewallpaper_toast_text_error">Network Error</string>
    <string name="chooser_wallpaper">Select wallpaper from</string>
    <string name="clean_master">Clean Master</string>
    <string name="cm_category_c0">Others</string>
    <string name="cm_category_c1">Games</string>
    <string name="cm_category_c10">System apps</string>
    <string name="cm_category_c12">Business</string>
    <string name="cm_category_c13">Finance</string>
    <string name="cm_category_c14">Personalization</string>
    <string name="cm_category_c2">Social</string>
    <string name="cm_category_c3">Tools</string>
    <string name="cm_category_c4">Media</string>
    <string name="cm_category_c5">Lifestyle</string>
    <string name="cm_category_c6">Photos</string>
    <string name="cm_category_c7">News &amp; Books</string>
    <string name="cm_category_c8">Fun</string>
    <string name="cm_category_c9">Shopping</string>
    <string name="cm_club_dialog_cancel">Cancel</string>
    <string name="cm_club_dialog_confirm">Confirm</string>
    <string name="cm_club_dialog_report">Reported</string>
    <string name="cm_club_dialog_stop_downloading">If you exit, the download will be stopped. Confirm exiting?</string>
    <string name="cm_club_download_stopped">Download stopped, Please check the network.</string>
    <string name="cm_club_google_plus">Google+</string>
    <string name="configure_wallpaper">Configure...</string>
    <string name="contacts_text">Contacts</string>
    <string name="crash_dialog_comment_prompt">Please provide as much detail as you can(e.g. the launcher module, issue frequency, operations…):</string>
    <string name="crash_dialog_ok_toast">Thank you !</string>
    <string name="crash_dialog_text">An unexpected error caused the program to stop .We need your feedback to help us fix the problem. Please be assured that we only collect error information ,not personal information .</string>
    <string name="crash_dialog_title">TSF Launcher error report</string>
    <string name="crash_no">Cancel</string>
    <string name="crash_yes">Send</string>
    <string name="daily_theme_download">DOWNLOAD FOR FREE</string>
    <string name="daily_theme_might_like">You Might Like</string>
    <string name="dbfile_export_dialog">Backing up configuration...</string>
    <string name="dbfile_export_error">Error backing up configuration!</string>
    <string name="dbfile_export_success">Configuration backed up successfully!</string>
    <string name="dbfile_import_dialog">Restoring configuration...</string>
    <string name="dbfile_import_error">Error restoring configuration!</string>
    <string name="dbfile_import_success">Configuration restored successfully!</string>
    <string name="dbfile_not_found">Configuration file not found!</string>
    <string name="dbfile_not_readable">Configuration file exists, but is not readable!</string>
    <string name="decorate_your_keyboard">Decorate your keyboard</string>
    <string name="default_icon_phone">Phone</string>
    <string name="default_icon_sms">Messaging</string>
    <string name="delete">Delete</string>
    <string name="delete_wallaper">Delete this wallpaper?</string>
    <string name="delete_wallpaper_fail">Failed</string>
    <string name="delete_wallpaper_suc">Successfully</string>
    <string name="detail_retry">Retry</string>
    <string name="detail_theme_download">DOWNLOAD FOR FREE</string>
    <string name="dialog_thanks">NO THANKS</string>
    <string name="exit_download_theme">Theme downloading. Exit now?</string>
    <string name="feature_start">Start</string>
    <string name="feature_version33_1">New Desktop Effect</string>
    <string name="feature_version33_2">Automatic Classification</string>
    <string name="feature_version33_3">New Icon Lable Style</string>
    <string name="feature_version34_1">New Icon Menu Settings</string>
    <string name="feature_version35_1">New Mark Effect Settings</string>
    <string name="feature_version36_1">New Widget - Dots Clock</string>
    <string name="feature_version37_1">New interface for All Apps</string>
    <string name="feature_version37_2">New orientation settings for Quick Contacts/ Recently used Menu</string>
    <string name="feature_version37_3">New Floating Button Settings</string>
    <string name="feature_version37_4">New Arrangement Tool</string>
    <string name="feature_version38_1">New Walllper Blur Settings</string>
    <string name="feature_version_352_1">New Floating Button Settings</string>
    <string name="feature_version_371_feature">New: App Drawer Bottom Menu Toggle</string>
    <string name="feature_version_371_feature2">New: All Apps Position Settings(Left/Right)</string>
    <string name="feature_version_371_fix_1">Fixed: Known bugs</string>
    <string name="feature_version_37_fix_1">Fixed: Floating Button disappearing issue</string>
    <string name="feature_version_37_fix_2">Fixed: System widget no refreshing issue for some devices</string>
    <string name="feature_version_37_fix_3">Fixed: Sorting issue in AppDrawer</string>
    <string name="feature_version_37_fix_4">Fixed: Other known bugs</string>
    <string name="feature_version_37_improved_1">Improved: Default Theme</string>
    <string name="feature_version_features">New Features</string>
    <string name="feature_version_improvement_fix">Improvement and fixed</string>
    <string name="feature_version_themes">New Themes</string>
    <string name="five_start_rating">5 star-rating</string>
    <string name="mn_back_key_action">Back key action</string>
    <string name="mn_gesture">Gesture</string>
    <string name="mn_gesture_double_tap">Double tap</string>
    <string name="mn_gesture_pinch_in">Pinch in (Two fingers)</string>
    <string name="mn_gesture_pinch_out">Pinch out (Two fingers)</string>
    <string name="mn_gesture_swipe_down">Swipe down</string>
    <string name="mn_gesture_swipe_down_two">Swipe down (Two fingers)</string>
    <string name="mn_gesture_swipe_left_two">Swipe left (Two fingers)</string>
    <string name="mn_gesture_swipe_right_two">Swipe right (Two fingers)</string>
    <string name="mn_gesture_swipe_up">Swipe up</string>
    <string name="mn_gesture_swipe_up_two">Swipe up (Two fingers)</string>
    <string name="mn_home_key_action">Home key action</string>
    <string name="mn_hotkey">Hotkeys</string>
    <string name="plugin_crop_crop_free">Free</string>
    <string name="plugin_crop_crop_square">Square</string>
    <string name="plugin_crop_custom">Custom</string>
    <string name="select_online_title">Select online wallpaper</string>
    <string name="tab_hot">Hot</string>
    <string name="tab_new">New</string>
    <string name="tab_pg_live_wallpaper">Live</string>
    <string name="theme_btn_next">Next</string>
    <string name="theme_diy_btn_choose_wallpaper">Select gallery wallpapers</string>
    <string name="theme_diy_choose_icon">Icon</string>
    <string name="theme_diy_choose_wallpaper">Wallpaper</string>
    <string name="theme_diy_generate_done">Check it in CM Theme-Mine.</string>
    <string name="theme_diy_icons_failed">Loading failed.</string>
    <string name="theme_diy_reselect_wallpaper">Reselect wallpaper</string>
    <string name="theme_diy_save_succ">Saved successfully</string>
    <string name="theme_diy_title">Theme DIY</string>
    <string name="theme_guideto_rating_bottom_tips">Give us 5 stars if you like it :P</string>
    <string name="theme_more_diy">More DIY</string>
    <string name="theme_submit_rating">5-star rating</string>
    <string name="theme_submit_submit">SUBMIT</string>
    <string name="theme_submit_tips">What an awesome theme! Share it with others!</string>
    <string name="wallpaper_categories">Categories</string>
    <string name="plugin_crop_crop_circle">Circle</string>
</resources>