<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/root" android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center_vertical" android:layout_gravity="bottom" android:orientation="vertical" android:id="@id/content" android:background="#ffffff" android:layout_width="match_parent" android:layout_height="151.5dp">
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="103.0dp">
            <ImageView android:layout_gravity="center_vertical" android:id="@id/icon" android:layout_width="55.0dp" android:layout_height="55.0dp" android:layout_marginLeft="16.0dp" android:layout_marginRight="8.0dp" />
            <FrameLayout android:layout_width="match_parent" android:layout_height="match_parent">
                <LinearLayout android:layout_gravity="center_vertical" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
                    <TextView android:textSize="15.0sp" android:textColor="#333333" android:gravity="center_vertical" android:id="@id/tips" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="15.0dp" android:text="@string/theme_submit_tips" />
                    <TextView android:textSize="15.0sp" android:textColor="#333333" android:gravity="center_vertical" android:id="@id/bottom_tips" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="15.0dp" android:text="@string/theme_guideto_rating_bottom_tips" android:singleLine="true" />
                </LinearLayout>
                <ImageView android:layout_gravity="right|top" android:id="@id/close" android:layout_width="18.0dp" android:layout_height="18.0dp" android:layout_marginTop="8.0dp" android:layout_marginRight="8.0dp" android:src="@drawable/custom_dialog_close" android:scaleType="fitXY" android:tint="#99333333" />
            </FrameLayout>
        </LinearLayout>
        <View android:background="@color/dialog_divider_color" android:layout_width="match_parent" android:layout_height="0.5dp" />
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="48.0dp">"

            <TextView android:textSize="16.0sp" android:textStyle="bold" android:textColor="#4480f7" android:gravity="center" android:id="@id/submit_theme_btn" android:background="@drawable/bottom_style_dialog_btn_selector" android:layout_width="0.0dp" android:layout_height="match_parent" android:text="@string/theme_submit_submit" android:layout_weight="1.0" />
            <View android:background="@color/dialog_divider_color" android:layout_width="0.5dp" android:layout_height="match_parent" />
            <TextView android:textSize="16.0sp" android:textStyle="bold" android:textColor="#4480f7" android:gravity="center" android:id="@id/share_theme_btn" android:background="@drawable/bottom_style_dialog_btn_selector" android:layout_width="0.0dp" android:layout_height="48.0dp" android:text="@string/theme_submit_rating" android:layout_weight="1.0" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
