<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/popup" android:background="@drawable/abc_menu_dropdown_panel_holo_dark" android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center" android:id="@id/menu1" android:background="@drawable/item_background_holo_dark" android:layout_width="match_parent" android:layout_height="48.0dp">
        <ImageView android:id="@id/icon1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="8.0dp" android:src="@drawable/ic_menu_crop_square" />
        <TextView android:id="@id/textView1" android:layout_width="100.0dp" android:layout_height="wrap_content" android:text="@string/plugin_crop_crop_square" />
        <RadioButton android:id="@id/radioButton1" android:clickable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="8.0dp" android:button="@drawable/holowhite_btn_radio_holo_dark" />
    </LinearLayout>
    <FrameLayout android:id="@id/framelayout1" android:background="@drawable/lightgray" android:layout_width="match_parent" android:layout_height="1.0dp" />
    <LinearLayout android:gravity="center" android:id="@id/menu2" android:background="@drawable/item_background_holo_dark" android:layout_width="match_parent" android:layout_height="48.0dp">
        <ImageView android:id="@id/icon2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="8.0dp" android:src="@drawable/ic_menu_crop_portrait" />
        <TextView android:id="@id/textView2" android:layout_width="100.0dp" android:layout_height="wrap_content" android:text="@string/plugin_crop_crop_free" />
        <RadioButton android:id="@id/radioButton2" android:clickable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="8.0dp" android:button="@drawable/holowhite_btn_radio_holo_dark" />
    </LinearLayout>
    <FrameLayout android:id="@id/framelayout2" android:background="@drawable/lightgray" android:layout_width="match_parent" android:layout_height="1.0dp" />
    <LinearLayout android:gravity="center" android:id="@id/menu4" android:background="@drawable/item_background_holo_dark" android:layout_width="match_parent" android:layout_height="48.0dp">
        <ImageView android:id="@id/icon4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="8.0dp" android:src="@drawable/ic_menu_crop_circle" />
        <TextView android:id="@id/textView4" android:layout_width="100.0dp" android:layout_height="wrap_content" android:text="@string/plugin_crop_crop_circle" />
        <RadioButton android:id="@id/radioButton4" android:clickable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="8.0dp" android:button="@drawable/holowhite_btn_radio_holo_dark" />
    </LinearLayout>
    <FrameLayout android:id="@id/framelayout3" android:background="@drawable/lightgray" android:layout_width="match_parent" android:layout_height="1.0dp" />
    <LinearLayout android:gravity="center" android:id="@id/menu3" android:background="@drawable/item_background_holo_dark" android:layout_width="match_parent" android:layout_height="48.0dp">
        <ImageView android:id="@id/icon3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="8.0dp" android:src="@drawable/ic_menu_crop_star" />
        <TextView android:id="@id/textView3" android:layout_width="100.0dp" android:layout_height="wrap_content" android:text="@string/plugin_crop_custom" />
        <RadioButton android:id="@id/radioButton3" android:clickable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="8.0dp" android:button="@drawable/holowhite_btn_radio_holo_dark" />
    </LinearLayout>
</LinearLayout>
